--- a/styles.css
+++ b/styles.css
@@ -11,5 +11,6 @@ h1 {
 
 p {
     font-size: 1.2rem;
-    color: rgb(0, 0, 0)
+    color: blue;
+    font-family: Verdana, Geneva, Tahoma, sans-serif
 }
